--- a/templates/index.html
+++ b/templates/index.html
@@ -8,32 +8,35 @@
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 </head>
 
 <body>
-<div class="login">
-    <h1>Heart Attack Prediction</h1>
-
+<div class="login container mt-5">
+    <h1 class="text-center" style="color: #20c0f3;">Heart Attack Prediction</h1>
     <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}" method="post">
+    <form class="d-flex row" action="{{ url_for('predict')}}" method="post">
 
-        <input type="text" name="age" placeholder="age" required="required"/>
-        <input type="text" name="sex" placeholder="sex" required="required"/>
-        <input type="text" name="cp" placeholder="cp" required="required"/>
-        <input type="text" name="trtbps" placeholder="trtbps" required="required"/>
-        <input type="text" name="chol" placeholder="chol" required="required"/>
-        <input type="text" name="fbs" placeholder="fbs" required="required"/>
-        <input type="text" name="restecg" placeholder="restecg" required="required"/>
-        <input type="text" name="thalachh" placeholder="thalachh" required="required"/>
-        <input type="text" name="exng" placeholder="exng" required="required"/>
-        <input type="text" name="oldpeak" placeholder="oldpeak" required="required"/>
-        <input type="text" name="slp" placeholder="slp" required="required"/>
-        <input type="text" name="caa" placeholder="caa" required="required"/>
-        <input type="text" name="thall" placeholder="thall" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="age" placeholder="age" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="sex" placeholder="sex" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="cp" placeholder="cp" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="trtbps" placeholder="trtbps" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="chol" placeholder="chol" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="fbs" placeholder="fbs" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="restecg" placeholder="restecg" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="thalachh" placeholder="thalachh" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="exng" placeholder="exng" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="oldpeak" placeholder="oldpeak" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="slp" placeholder="slp" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="caa" placeholder="caa" required="required"/>
+        <input class="form-control w-50 my-input my-2" type="number" name="thall" placeholder="thall" required="required"/>
 
 
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+
+        <button type="submit" class="btn text-white" style="background-color: #09dca4;">Predict</button>
     </form>
 
     <br>
